# flight-analytics

./: .gitignore  pyproject.toml
src/: config_logger.py  models.py  pipeline_elt.py  scraper_links.py  transform.py
tests/: test_download_file.py  test_model_validator.py  test_scraper_links.py
tests/models_tests/: voos_invalidos.csv  voos_validos.csv
